--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Light homemade IoT | by Bartek Szopka | (presentation based on impress.js)</title>
 
-    <meta name="description" content="Light homemade IoT | by Bartek Szopka | (presentation based on impress.js)"
+    <meta name="description" content="Light homemade IoT | by Jacek Cząstkiewicz | (presentation based on impress.js)"
     />
     <meta name="author" content="Jacek Cząstkiewicz" />
 
