github pages published

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>Light homemade IoT | by Bartek Szopka | (presentation based on impress.js)</title>
+    <title>Light homemade IoT | by Jacek Cząstkiewicz | (presentation based on impress.js)</title>
 
     <meta name="description" content="Light homemade IoT | by Jacek Cząstkiewicz | (presentation based on impress.js)"
     />
